@startuml
title Tooltip Overlay Structure
skinparam packageStyle rectangle
skinparam shadowing false

class Tooltip
class TooltipBounds
interface TooltipTarget
class TooltipArea
class TooltipSupport
class TooltipInputLayer
class TooltipOverlayController
class TooltipModel
class TooltipViewModel
class TooltipView
class TooltipViewState
class DefaultTooltipStyle
class TooltipRenderStyle
class DefaultTooltipRenderer
class OverlayManager
interface ThemeProvider
class ThemeSnapshot

TooltipArea ..|> TooltipTarget
TooltipSupport ..|> TooltipTarget
TooltipTarget --> Tooltip : optional
TooltipTarget --> TooltipBounds : exposes
TooltipInputLayer --> TooltipOverlayController : showIfMouseOver
TooltipOverlayController --> TooltipTarget : registered targets
TooltipOverlayController --> OverlayManager : registers one overlay
TooltipOverlayController --> TooltipModel : owns
TooltipOverlayController --> TooltipViewModel : owns
TooltipOverlayController --> TooltipView : owns
TooltipViewModel --> TooltipModel : reads / updates
TooltipView --> TooltipViewModel : reads
TooltipView --> TooltipViewState : builds
TooltipView --> DefaultTooltipStyle : renders with
DefaultTooltipStyle --> ThemeProvider : reads snapshot
ThemeProvider --> ThemeSnapshot
DefaultTooltipStyle --> TooltipRenderStyle : creates
DefaultTooltipRenderer --> TooltipRenderStyle : draws
@enduml
